--- a/css/banlist.css
+++ b/css/banlist.css
@@ -9,4 +9,5 @@ body {
 				url("../img/hytale.png") no-repeat center center fixed;
 	background-size: cover;
 	font-family: Helvetica;
+	text-align: center
 }  
