--- a/css/banlist.css
+++ b/css/banlist.css
@@ -10,4 +10,16 @@ body {
 	background-size: cover;
 	font-family: Helvetica;
 	text-align: center
-}  
+}  	
+tbody:nth-child(odd)  { 
+	background-color : #CED4E5; 
+}
+tbody:nth-child(even) { 
+	background-color : #E8EBF5; 
+}
+th { 
+	ackground-color : #557CBA; padding:0.7em; 
+}
+td {
+	padding:0.5em;
+}
