--- a/css/banlist.css
+++ b/css/banlist.css
@@ -12,6 +12,10 @@ body {
 	text-align: center;
 	color: white;
 }  	
+.center {
+	margin-left: auto;
+  	margin-right: auto;
+}
 tbody:nth-child(odd)  { 
 	background: rgba(76, 175, 80, 0.1)
 }
