--- a/css/votes.css
+++ b/css/votes.css
@@ -10,6 +10,10 @@ body {
 	background-size: cover;
 	font-family: Helvetica;
 }  
+.center {
+	margin-left: auto;
+  	margin-right: auto;
+}
 h1 {
 	color : white;
 	text-align: center;
